Add 1Password ClusterSecretStore

--- a/infrastructure/core/kustomization.yaml
+++ b/infrastructure/core/kustomization.yaml
@@ -4,3 +4,4 @@ resources:
   - cert-manager.yaml
   - external-secrets.yaml
   - onepassword-connect.yaml
+  - onepassword-cluster-secret-store.yaml
