--- a/infrastructure/core/onepassword-cluster-secret-store.yaml
+++ b/infrastructure/core/onepassword-cluster-secret-store.yaml
@@ -7,7 +7,7 @@ spec:
     onepassword:
       connectHost: http://onepassword-connect.onepassword.svc.cluster.local:8080
       vaults:
-        Homelab K8s: 1
+        Homelab: 1
       auth:
         secretRef:
           connectTokenSecretRef:
