Fix 1Password vault ID

--- a/infrastructure/core/onepassword-cluster-secret-store.yaml
+++ b/infrastructure/core/onepassword-cluster-secret-store.yaml
@@ -14,3 +14,5 @@ spec:
             name: onepassword-token
             namespace: onepassword
             key: token
+      vaultsByID:
+      - hyl45hn3lcrweygwl7ci73vxyy
