Fix vault ID format

--- a/infrastructure/core/onepassword-cluster-secret-store.yaml
+++ b/infrastructure/core/onepassword-cluster-secret-store.yaml
@@ -7,12 +7,10 @@ spec:
     onepassword:
       connectHost: http://onepassword-connect.onepassword.svc.cluster.local:8080
       vaults:
-        Homelab: 1
+        Homelab: hyl45hn3lcrweygwl7ci73vxyy
       auth:
         secretRef:
           connectTokenSecretRef:
             name: onepassword-token
             namespace: onepassword
             key: token
-      vaultsByID:
-      - hyl45hn3lcrweygwl7ci73vxyy
