--- a/infrastructure/core/onepassword-connect.yaml
+++ b/infrastructure/core/onepassword-connect.yaml
@@ -21,12 +21,6 @@ spec:
       containers:
       - name: connect-api
         image: 1password/connect-api:1.7.3
-        env:
-        - name: OP_SESSION
-          valueFrom:
-            secretKeyRef:
-              name: op-credentials
-              key: 1password-credentials.json
         ports:
         - containerPort: 8080
           name: http
@@ -37,14 +31,15 @@ spec:
           limits:
             cpu: 200m
             memory: 256Mi
+        volumeMounts:
+        - name: shared-data
+          mountPath: /home/opuser/.op/data
+        - name: credentials
+          mountPath: /home/opuser/.op/1password-credentials.json
+          subPath: 1password-credentials.json
+          readOnly: true
       - name: connect-sync
         image: 1password/connect-sync:1.7.3
-        env:
-        - name: OP_SESSION
-          valueFrom:
-            secretKeyRef:
-              name: op-credentials
-              key: 1password-credentials.json
         resources:
           requests:
             cpu: 50m
@@ -55,9 +50,16 @@ spec:
         volumeMounts:
         - name: shared-data
           mountPath: /home/opuser/.op/data
+        - name: credentials
+          mountPath: /home/opuser/.op/1password-credentials.json
+          subPath: 1password-credentials.json
+          readOnly: true
       volumes:
       - name: shared-data
         emptyDir: {}
+      - name: credentials
+        secret:
+          secretName: op-credentials
 ---
 apiVersion: v1
 kind: Service
