Revert vault config to numeric format

--- a/infrastructure/core/onepassword-cluster-secret-store.yaml
+++ b/infrastructure/core/onepassword-cluster-secret-store.yaml
@@ -7,7 +7,7 @@ spec:
     onepassword:
       connectHost: http://onepassword-connect.onepassword.svc.cluster.local:8080
       vaults:
-        Homelab: hyl45hn3lcrweygwl7ci73vxyy
+        Homelab: 1
       auth:
         secretRef:
           connectTokenSecretRef:
