Add init container to wait for sync database

--- a/infrastructure/core/onepassword-connect.yaml
+++ b/infrastructure/core/onepassword-connect.yaml
@@ -3,6 +3,16 @@ kind: Namespace
 metadata:
   name: onepassword
 ---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: op-healthcheck
+  namespace: onepassword
+data:
+  healthcheck.sh: |
+    #!/bin/sh
+    test -f /home/opuser/.op/data/1password.sqlite
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -18,12 +28,16 @@ spec:
       labels:
         app: onepassword-connect
     spec:
+      initContainers:
+      - name: wait-for-sync
+        image: busybox:1.36
+        command: ['sh', '-c', 'until test -f /home/opuser/.op/data/1password.sqlite; do echo waiting for database; sleep 2; done']
+        volumeMounts:
+        - name: shared-data
+          mountPath: /home/opuser/.op/data
       containers:
-      - name: connect-api
-        image: 1password/connect-api:1.7.3
-        ports:
-        - containerPort: 8080
-          name: http
+      - name: connect-sync
+        image: 1password/connect-sync:1.7.3
         resources:
           requests:
             cpu: 50m
@@ -38,8 +52,11 @@ spec:
           mountPath: /home/opuser/.op/1password-credentials.json
           subPath: 1password-credentials.json
           readOnly: true
-      - name: connect-sync
-        image: 1password/connect-sync:1.7.3
+      - name: connect-api
+        image: 1password/connect-api:1.7.3
+        ports:
+        - containerPort: 8080
+          name: http
         resources:
           requests:
             cpu: 50m
@@ -47,6 +64,16 @@ spec:
           limits:
             cpu: 200m
             memory: 256Mi
+        livenessProbe:
+          httpGet:
+            path: /health
+            port: 8080
+          initialDelaySeconds: 15
+        readinessProbe:
+          httpGet:
+            path: /health
+            port: 8080
+          initialDelaySeconds: 10
         volumeMounts:
         - name: shared-data
           mountPath: /home/opuser/.op/data
