Remove init container, add OP_SESSION env var

--- a/infrastructure/core/onepassword-connect.yaml
+++ b/infrastructure/core/onepassword-connect.yaml
@@ -3,16 +3,6 @@ kind: Namespace
 metadata:
   name: onepassword
 ---
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: op-healthcheck
-  namespace: onepassword
-data:
-  healthcheck.sh: |
-    #!/bin/sh
-    test -f /home/opuser/.op/data/1password.sqlite
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -28,16 +18,12 @@ spec:
       labels:
         app: onepassword-connect
     spec:
-      initContainers:
-      - name: wait-for-sync
-        image: busybox:1.36
-        command: ['sh', '-c', 'until test -f /home/opuser/.op/data/1password.sqlite; do echo waiting for database; sleep 2; done']
-        volumeMounts:
-        - name: shared-data
-          mountPath: /home/opuser/.op/data
       containers:
       - name: connect-sync
         image: 1password/connect-sync:1.7.3
+        env:
+        - name: OP_SESSION
+          value: /home/opuser/.op/1password-credentials.json
         resources:
           requests:
             cpu: 50m
@@ -54,6 +40,9 @@ spec:
           readOnly: true
       - name: connect-api
         image: 1password/connect-api:1.7.3
+        env:
+        - name: OP_SESSION
+          value: /home/opuser/.op/1password-credentials.json
         ports:
         - containerPort: 8080
           name: http
@@ -64,16 +53,12 @@ spec:
           limits:
             cpu: 200m
             memory: 256Mi
-        livenessProbe:
-          httpGet:
-            path: /health
-            port: 8080
-          initialDelaySeconds: 15
         readinessProbe:
           httpGet:
             path: /health
             port: 8080
-          initialDelaySeconds: 10
+          initialDelaySeconds: 15
+          periodSeconds: 5
         volumeMounts:
         - name: shared-data
           mountPath: /home/opuser/.op/data
