Switch to official 1Password Connect Helm chart

--- a/infrastructure/core/onepassword-connect.yaml
+++ b/infrastructure/core/onepassword-connect.yaml
@@ -3,79 +3,26 @@ kind: Namespace
 metadata:
   name: onepassword
 ---
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: helm.toolkit.fluxcd.io/v2
+kind: HelmRelease
 metadata:
   name: onepassword-connect
   namespace: onepassword
 spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: onepassword-connect
-  template:
-    metadata:
-      labels:
-        app: onepassword-connect
+  interval: 30m
+  chart:
     spec:
-      containers:
-      - name: connect-sync
-        image: 1password/connect-sync:1.7.3
-        resources:
-          requests:
-            cpu: 50m
-            memory: 128Mi
-          limits:
-            cpu: 200m
-            memory: 256Mi
-        volumeMounts:
-        - name: shared-data
-          mountPath: /home/opuser/.op/data
-        - name: credentials
-          mountPath: /home/opuser/.op/1password-credentials.json
-          subPath: 1password-credentials.json
-          readOnly: true
-      - name: connect-api
-        image: 1password/connect-api:1.7.3
-        ports:
-        - containerPort: 8080
-          name: http
-        resources:
-          requests:
-            cpu: 50m
-            memory: 128Mi
-          limits:
-            cpu: 200m
-            memory: 256Mi
-        readinessProbe:
-          httpGet:
-            path: /health
-            port: 8080
-          initialDelaySeconds: 15
-          periodSeconds: 5
-        volumeMounts:
-        - name: shared-data
-          mountPath: /home/opuser/.op/data
-        - name: credentials
-          mountPath: /home/opuser/.op/1password-credentials.json
-          subPath: 1password-credentials.json
-          readOnly: true
-      volumes:
-      - name: shared-data
-        emptyDir: {}
-      - name: credentials
-        secret:
-          secretName: op-credentials
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: onepassword-connect
-  namespace: onepassword
-spec:
-  selector:
-    app: onepassword-connect
-  ports:
-  - port: 8080
-    targetPort: 8080
-    name: http
+      chart: connect
+      version: "1.15.1"
+      sourceRef:
+        kind: HelmRepository
+        name: onepassword
+        namespace: flux-system
+  values:
+    connect:
+      credentials: op-credentials
+      credentials_key: 1password-credentials.json
+    operator:
+      create: false
+      token:
+        value: ""
