--- a/infrastructure/core/onepassword-connect.yaml
+++ b/infrastructure/core/onepassword-connect.yaml
@@ -3,26 +3,98 @@ kind: Namespace
 metadata:
   name: onepassword
 ---
-apiVersion: helm.toolkit.fluxcd.io/v2
-kind: HelmRelease
+apiVersion: v1
+kind: Service
 metadata:
   name: onepassword-connect
   namespace: onepassword
 spec:
-  interval: 30m
-  chart:
+  type: ClusterIP
+  selector:
+    app: onepassword-connect
+  ports:
+    - name: http
+      port: 8080
+      targetPort: 8080
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: onepassword-connect
+  namespace: onepassword
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: onepassword-connect
+  template:
+    metadata:
+      labels:
+        app: onepassword-connect
     spec:
-      chart: connect
-      version: "1.15.1"
-      sourceRef:
-        kind: HelmRepository
-        name: onepassword
-        namespace: flux-system
-  values:
-    connect:
-      credentials: op-credentials
-      credentials_key: 1password-credentials.json
-    operator:
-      create: false
-      token:
-        value: ""
+      volumes:
+        - name: shared-data
+          emptyDir: {}
+        - name: credentials
+          secret:
+            secretName: op-credentials
+      containers:
+        - name: connect-api
+          image: 1password/connect-api:1.7.3
+          ports:
+            - containerPort: 8080
+          env:
+            - name: OP_BUS_PORT
+              value: "11220"
+            - name: OP_BUS_PEERS
+              value: "localhost:11221"
+            - name: OP_HTTP_PORT
+              value: "8080"
+            - name: OP_LOG_LEVEL
+              value: "info"
+          volumeMounts:
+            - name: shared-data
+              mountPath: /home/opuser/.op/data
+          livenessProbe:
+            httpGet:
+              path: /heartbeat
+              port: 8080
+            initialDelaySeconds: 15
+            periodSeconds: 30
+          readinessProbe:
+            httpGet:
+              path: /health
+              port: 8080
+            initialDelaySeconds: 15
+        - name: connect-sync
+          image: 1password/connect-sync:1.7.3
+          ports:
+            - containerPort: 8081
+          env:
+            - name: OP_HTTP_PORT
+              value: "8081"
+            - name: OP_BUS_PORT
+              value: "11221"
+            - name: OP_BUS_PEERS
+              value: "localhost:11220"
+            - name: OP_LOG_LEVEL
+              value: "info"
+            - name: OP_SESSION
+              valueFrom:
+                secretKeyRef:
+                  name: op-credentials
+                  key: 1password-credentials.json
+          volumeMounts:
+            - name: shared-data
+              mountPath: /home/opuser/.op/data
+          livenessProbe:
+            httpGet:
+              path: /heartbeat
+              port: 8081
+            initialDelaySeconds: 15
+            periodSeconds: 30
+          readinessProbe:
+            httpGet:
+              path: /health
+              port: 8081
+            initialDelaySeconds: 15
