Fix credentials file path using subPath mount

--- a/infrastructure/core/onepassword-connect.yaml
+++ b/infrastructure/core/onepassword-connect.yaml
@@ -56,7 +56,8 @@ spec:
             - name: shared-data
               mountPath: /home/opuser/.op/data
             - name: credentials
-              mountPath: /home/opuser/.op/config
+              mountPath: /home/opuser/.op/1password-credentials.json
+              subPath: 1password-credentials.json
               readOnly: true
           livenessProbe:
             httpGet:
@@ -86,7 +87,8 @@ spec:
             - name: shared-data
               mountPath: /home/opuser/.op/data
             - name: credentials
-              mountPath: /home/opuser/.op/config
+              mountPath: /home/opuser/.op/1password-credentials.json
+              subPath: 1password-credentials.json
               readOnly: true
           livenessProbe:
             httpGet:
