Add External DNS annotations to hello-world service

--- a/apps/hello-world/service.yaml
+++ b/apps/hello-world/service.yaml
@@ -3,6 +3,9 @@ kind: Service
 metadata:
   name: hello-world
   namespace: hello-world
+  annotations:
+    external-dns.alpha.kubernetes.io/hostname: hello.kitzy.net
+    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
 spec:
   type: ClusterIP
   selector:
