--- a/infrastructure/core/kustomization.yaml
+++ b/infrastructure/core/kustomization.yaml
@@ -5,3 +5,5 @@ resources:
   - external-secrets.yaml
   - onepassword-connect.yaml
   - onepassword-cluster-secret-store.yaml
+  - self-signed-issuer.yaml
+  - self-signed-issuer.yaml
