--- a/apps/fleet/external-secret.yaml
+++ b/apps/fleet/external-secret.yaml
@@ -32,16 +32,16 @@ spec:
         key: Fleet Secrets
         property: FLEET_LICENSE_KEY
     
-    # AWS S3 credentials
+    # AWS S3 credentials (matching exact field names from 1Password)
     - secretKey: s3-bucket
       remoteRef:
         key: Fleet Secrets
-        property: FLEET_S3_BUCKET
+        property: FLEET_S3_SOFTWARE_INSTALLERS_BUCKET
     - secretKey: s3-access-key-id
       remoteRef:
         key: Fleet Secrets
-        property: FLEET_S3_ACCESS_KEY_ID
+        property: FLEET_S3_SOFTWARE_INSTALLERS_ACCESS_KEY_ID
     - secretKey: s3-secret-access-key
       remoteRef:
         key: Fleet Secrets
-        property: FLEET_S3_SECRET_ACCESS_KEY
+        property: FLEET_S3_SOFTWARE_INSTALLERS_SECRET_ACCESS_KEY
